--- a/env.example
+++ b/env.example
@@ -3,6 +3,7 @@ APP_DEBUG=false
 APP_APP_NAME=Circles
 
 # Database Configuration
+# Format: postgresql+asyncpg://username:password@host:port/database
 DATABASE_URL=postgresql+asyncpg://postgres:password@127.0.0.1:5432/circles
 
 # OTP Configuration
