add tests for auth jwt

--- a/alembic.ini
+++ b/alembic.ini
@@ -51,7 +51,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+asyncpg://postgres:password@localhost/circles
+# This value will be overridden by env.py at runtime. Keep a sane default.
+sqlalchemy.url = postgresql+psycopg://postgres:password@127.0.0.1:5432/circles
 
 
 [post_write_hooks]
