--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "pyotp>=2.9.0",
     "email-validator>=2.1.0",
     "greenlet>=3.0.0",
+    "python-jose[cryptography]>=3.3.0",
+    "psycopg[binary,pool]>=3.2.1",
 ]
 
 [dependency-groups]
@@ -22,6 +24,7 @@ dev = [
     "pytest>=8.4.1",
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
 ]
 [tool.pytest.ini_options]
 pythonpath = ["."]
