Add support for direct messaging and following features in the API. Implement new database models for DM threads, messages, and participant states. Create endpoints for sending and managing DM requests, messages, and user follow/unfollow actions. Enhance storage service for handling media uploads to S3 or local storage. Update README with new functionalities and usage examples. Add tests to ensure proper behavior of new features.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "greenlet>=3.0.0",
     "python-jose[cryptography]>=3.3.0",
     "psycopg[binary,pool]>=3.2.1",
+    "boto3>=1.40.13",
 ]
 
 [dependency-groups]
