--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-jose[cryptography]>=3.3.0",
     "psycopg[binary,pool]>=3.2.1",
     "boto3>=1.40.13",
+    "prometheus-client>=0.20.0",
 ]
 
 [dependency-groups]
