--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "psycopg[binary,pool]>=3.2.1",
     "boto3>=1.40.13",
     "prometheus-client>=0.20.0",
+    "pillow>=10.4.0",
 ]
 
 [dependency-groups]
