Add comprehensive testing suite for Circles application, including user authentication, onboarding, and activity feed functionalities. Implement unique phone number handling for OTP flows and enhance existing test scripts for better coverage. Update Docker configuration to include metrics token and streamline pytest settings for improved warning management.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,9 @@ services:
       - APP_STORAGE_BACKEND=local
       - APP_CHECKIN_ENFORCE_PROXIMITY=false
       - APP_USE_POSTGIS=false
+      - APP_METRICS_TOKEN=dev-metrics-token
     volumes:
       - ./media:/app/media
-      - .:/app
     depends_on:
       postgres:
         condition: service_healthy
