--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
         echo 'Waiting for database...' &&
         sleep 5 &&
         echo 'Running migrations...' &&
-        uv run alembic upgrade head &&
+        uv run alembic upgrade heads &&
         echo 'Starting app...' &&
         uv run uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
       "
