Update Docker configuration to enable PostGIS and enhance README.md with setup instructions
- Changed the PostgreSQL image to `postgis/postgis:15-3.4` to enable PostGIS support.
- Added an initialization script to create PostGIS extensions in the `circles` database.
- Updated the README.md to include instructions for enabling PostGIS in Docker and verifying the setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
+    image: postgis/postgis:15-3.4
     container_name: circles_postgres
     environment:
       POSTGRES_DB: circles
@@ -12,6 +12,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./docker/initdb:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -32,7 +33,7 @@ services:
       - APP_JWT_SECRET_KEY=dev-jwt-secret-key-change-in-production
       - APP_STORAGE_BACKEND=local
       - APP_CHECKIN_ENFORCE_PROXIMITY=false
-      - APP_USE_POSTGIS=false
+      - APP_USE_POSTGIS=true
       - APP_METRICS_TOKEN=dev-metrics-token
     volumes:
       - ./media:/app/media
