Add .dockerignore file to exclude unnecessary files from Docker builds
- Created a new .dockerignore file to specify files and directories to be ignored during Docker image builds, including Terraform artifacts, Python virtual environments, build artifacts, and local media/uploads.
- Updated .gitignore to include Terraform-related files and local generated secrets, ensuring a cleaner repository and preventing sensitive information from being included in version control.

--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,15 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 scripts/create_admin_user.py
+
+# Terraform
+infra/terraform/.terraform/
+infra/terraform/terraform.tfstate
+infra/terraform/terraform.tfstate.*
+infra/terraform/terraform.tfvars
+infra/terraform/tfplan
+infra/terraform/crash.log
+infra/terraform/*.backup
+
+# Local generated secrets
+infra/secrets.generated.env
