Update .gitignore to include Terraform-related files and ensure proper version control
- Added entries to ignore Terraform directories and state files, preventing sensitive information from being tracked.
- Included a rule to always commit the provider lockfile for consistency in Terraform environments.

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,15 @@ infra/terraform/*.backup
 
 # Local generated secrets
 infra/secrets.generated.env
+
+# Terraform (global)
+.terraform/
+*.tfstate
+*.tfstate.*
+*.tfvars
+*.tfplan
+crash.log
+crash.*.log
+
+# Always commit provider lockfile
+!**/.terraform.lock.hcl
