Refactor authentication to support phone-only OTP flow
- Removed email-based OTP functionality from the authentication endpoints, including request and verification processes.
- Updated related schemas and services to handle phone numbers exclusively for user identification.
- Adjusted documentation to reflect the changes in authentication methods, ensuring clarity for users and developers.
- Enhanced rate limiting for OTP requests and verifications, making it configurable via settings.
- Updated sample data population and tests to align with the new phone-based authentication approach.

--- a/requirements.txt
+++ b/requirements.txt
@@ -119,14 +119,12 @@ cryptography==45.0.6 \
 dnspython==2.7.0 \
     --hash=sha256:b4c34b7d10b51bcc3a5071e7b8dee77939f1e878477eeecc965e9835f63c6c86 \
     --hash=sha256:ce9c432eda0dc91cf618a5cedf1a4e142651196bbcd2c80e89ed5a907e5cfaf1
-    # via email-validator
+    # removed email-validator
 ecdsa==0.19.1 \
     --hash=sha256:30638e27cf77b7e15c4c4cc1973720149e1033827cfd00661ca5c8cc0cdb24c3 \
     --hash=sha256:478cba7b62555866fcb3bb3fe985e06decbdb68ef55713c4e5ab98c57d508e61
     # via python-jose
-email-validator==2.2.0 \
-    --hash=sha256:561977c2d73ce3611850a06fa56b414621e0c8faa9d66f2611407d87465da631 \
-    --hash=sha256:cb690f344c617a714f22e66ae771445a1ceb46821152df8e165c5f9a364582b7
+    
     # via
     #   circles
     #   fastapi
@@ -211,7 +209,7 @@ idna==3.10 \
     --hash=sha256:946d195a0d259cbba61165e88e65941f16e9b36ea6ddb97f00452bae8b1287d3
     # via
     #   anyio
-    #   email-validator
+    #   
     #   httpx
 jinja2==3.1.6 \
     --hash=sha256:0137fb05990d35f1275a587e9aee6d56da821fc83491a0fb838183be43f66d6d \
