Update .env.example and application configuration for Foursquare integration
- Modified .env.example to include new configuration options for Foursquare trending features, such as enabling/disabling trending and setting the radius for searches.
- Enhanced app/config.py to define new settings related to Foursquare trending, including fallback and override options.
- Implemented Foursquare trending functionality in place_data_service_v2.py, allowing the application to fetch trending venues based on location.
- Updated places.py to utilize the new Foursquare trending logic, providing a fallback mechanism for trending places when internal data is unavailable.
- Adjusted API endpoints to include new parameters and improve response handling for external place suggestions.

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,23 @@
-# Circles environment example
-# Copy to .env and customize values as needed
-
-# General
 APP_DEBUG=true
-
-# Database
 APP_DATABASE_URL=postgresql+asyncpg://postgres:password@postgres:5432/circles
 
-# OTP
+# Auth / OTP
 APP_OTP_SECRET_KEY=change-me
 APP_OTP_EXPIRY_MINUTES=10
+APP_OTP_RATE_LIMIT_ENABLED=false
+APP_OTP_REQUESTS_PER_MINUTE=5
+APP_OTP_REQUESTS_BURST=10
 
-# JWT
+# JWT (if used)
 APP_JWT_SECRET_KEY=change-me
 APP_JWT_ALGORITHM=HS256
 APP_JWT_EXPIRY_MINUTES=30
 
+# CORS
+APP_CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173,http://127.0.0.1:5173
+
 # Storage
-APP_STORAGE_BACKEND=local  # local or s3
+APP_STORAGE_BACKEND=local
 APP_S3_BUCKET=
 APP_S3_REGION=
 APP_S3_ENDPOINT_URL=
@@ -29,17 +29,10 @@ APP_S3_USE_PATH_STYLE=false
 # Metrics
 APP_METRICS_TOKEN=
 
-# Geo / Check-ins
+# Geo / PostGIS
 APP_USE_POSTGIS=true
 APP_CHECKIN_ENFORCE_PROXIMITY=true
 APP_CHECKIN_MAX_DISTANCE_METERS=500
-
-# Place Data APIs
-APP_FOURSQUARE_API_KEY=demo_key_for_testing
-APP_USE_OPENSTREETMAP=true
-
-# Overpass API endpoints (failover list). You can set as JSON array or comma-separated.
-APP_OVERPASS_ENDPOINTS=["https://overpass-api.de/api/interpreter","https://overpass.kumi.systems/api/interpreter","https://lz4.overpass-api.de/api/interpreter"]
 
 # DM rate limits
 APP_DM_REQUESTS_PER_MIN=5
@@ -60,12 +53,18 @@ APP_ENRICH_MIN_NAME_SIM=0.65
 APP_AUTOSEED_ENABLED=true
 APP_AUTOSEED_MIN_OSM_COUNT=500
 
-# Upload limits (MB)
+# Upload limits
 APP_AVATAR_MAX_MB=5
 APP_PHOTO_MAX_MB=10
 
-# External suggestions radius (meters)
+# External suggestions
 APP_EXTERNAL_SUGGESTIONS_RADIUS_M=10000
 
-# Logging sample rate (0..1)
+# Foursquare
+APP_FOURSQUARE_API_KEY=
+APP_FSQ_TRENDING_ENABLED=true
+APP_FSQ_TRENDING_OVERRIDE=true
+APP_FSQ_TRENDING_RADIUS_M=5000
+
+# Logging
 APP_LOG_SAMPLE_RATE=0.1
