--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "boto3>=1.40.13",
     "prometheus-client>=0.20.0",
     "pillow>=10.4.0",
+    "aiosqlite>=0.21.0",
 ]
 
 [dependency-groups]
