feat(dm): add APP_DM_ALLOW_DIRECT flag to allow direct DMs; adjust privacy/auto-accept; update changelog

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "prometheus-client>=0.20.0",
     "pillow>=10.4.0",
     "aiosqlite>=0.21.0",
+    "websockets>=15.0.1",
+    "httpx>=0.28.1",
 ]
 
 [dependency-groups]
