Fix: Improve iPhone image upload support
- Add pillow-heif plugin for HEIC format support
- Improve HEIC file validation with proper file signature detection
- Add better error messages for iPhone users
- Add debug logging to help diagnose image validation issues
- This should resolve the 'you must be png or from gallery or camera' error

--- a/requirements.txt
+++ b/requirements.txt
@@ -269,6 +269,7 @@ mdurl==0.1.2 \
     --hash=sha256:bb413d29f5eea38f31dd4754dd7377d4465116fb207585f97bf925588687c1ba
     # via markdown-it-py
 pillow==11.3.0 \
+pillow-heif==0.16.0 \
     --hash=sha256:023f6d2d11784a465f09fd09a34b150ea4672e85fb3d05931d89f373ab14abb2 \
     --hash=sha256:02a723e6bf909e7cea0dac1b0e0310be9d7650cd66222a5f1c571455c0a45214 \
     --hash=sha256:05f6ecbeff5005399bb48d198f098a9b4b6bdf27b8487c7f38ca16eeb070cd59 \
