--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Local database files
+circles.db
+*.db
+
 # Flask stuff:
 instance/
 .webassets-cache
